welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();driote();

while(estFaceMur==false & estSurBiscuit==false){
	 for (k<-1 to 5 ) {
		avance();
	}
}


while(estFaceMur==false & estSurBiscuit==true){
	prendBiscuit();
	droite();
	droite();
	for (k<-1 to 5 ) {
		avance();
	}
	poseBiscuit();
	droite();
	droite();
}

while(estFaceMur==false & estSurBiscuit==false){
	droite();	avance();gauche();avance();
}
	
